--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Lovers</title>
+    <title>League of Legends Tool</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="favicon.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100&display=swap" rel="stylesheet">
     <header>League of Legends Tool</header>
   </head>
   <body>
     <nav class="menu">
       <ul>
-        <button class="about-the-game-button"><li>Sobre o Jogo</li></button>
-        <button class="characters-button"><li>Personagens</li></button>
-        <button class="youtube-button" id="youtube-button"><li>Youtube</li></button>
-        <button class="compare-button" id="compare-button"><li>Compare</li></button>
+        <form action="index.html" method="get" id="buttons-form">
+          <button class="about-the-game-button"><li>Sobre o Jogo</li></button>
+          <button class="characters-button"><li>Personagens</li></button>
+          <button class="youtube-button"><li>Youtube</li></button>
+          <button class="compare-button"><li>Compare</li></button>
+      </form>
       </ul>
     </nav>
     <br><br>
