--- a/about-the-game.html
+++ b/about-the-game.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <div class="header-link"><a href="index.html">
-    <header>League of Legends Tool</header>
+        <header title="League of Legends Tool - Main Page">League of Legends Tool</header>
   </a>
   </div>
   </head>
@@ -35,7 +35,7 @@
           </form>
         </ul>
       </nav>
-    <br /><br />
+    <br />
     <div class="introduction-game">
         <h1>Sobre o Jogo</h1>
       <p>League of Legends é um jogo de estratégia em que duas equipes de cinco
@@ -43,5 +43,8 @@
         entre mais de 140 Campeões para realizar jogadas épicas, assegurar abates
         e destruir torres conforme você luta até a vitória.</p>
     </div>
+    <footer class="made-by">Copyright (c) 2020 by Amanda e Larissa</footer>
+    <div id="root"></div>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
