--- a/characters.html
+++ b/characters.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <div class="header-link"><a href="index.html">
-    <header>League of Legends Tool</header>
+        <header title="League of Legends Tool - Main Page">League of Legends Tool</header>
   </a>
   </div>
   </head>
@@ -35,7 +35,7 @@
           </form>
         </ul>
       </nav>
-    <br /><br />
+    <br />
     <div class="characters-list">
         <h1>Campeões</h1>
         <p>PERSONAGENS DO JOGO</p>
