--- a/compare.html
+++ b/compare.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <div class="header-link"><a href="index.html">
-    <header>League of Legends Tool</header>
+        <header title="League of Legends Tool - Main Page">League of Legends Tool</header>
   </a>
   </div>
   </head>
@@ -35,4 +35,13 @@
         </form>
       </ul>
     </nav>
-    <br /><br/>
+    <br />
+    <div class="compare-characters">
+        <h1>Compare Campeões</h1>
+      <p>COMPARE CAMPEÕES</p>
+    </div>
+    <footer class="made-by">Copyright (c) 2020 by Amanda e Larissa</footer>
+    <div id="root"></div>
+    <script src="main.js" type="module"></script>
+  </body>
+</html>
