--- a/characters.html
+++ b/characters.html
@@ -10,36 +10,39 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100&display=swap"
       rel="stylesheet"
     />
-    <div class="header-link"><a href="index.html">
-        <header title="League of Legends Tool - Main Page">League of Legends Tool</header>
-  </a>
-  </div>
+    <div class="header-link">
+      <a href="index.html">
+        <header title="League of Legends Tool - Main Page">
+          League of Legends Tool
+        </header>
+      </a>
+    </div>
   </head>
 
   <body>
     <nav class="menu">
-        <ul>
-          <form method="post" id="buttons-form">
-            <button class="about-the-game-button">
-              <li><a href="about-the-game.html">Sobre o Jogo</a></li>
-            </button>
-            <button class="characters-button">
-              <li><a href="characters.html">Personagens</a></li>
-            </button>
-            <button class="youtube-button">
-              <li><a href="youtube.html">Youtube</a></li>
-            </button>
-            <button class="compare-button">
-              <li><a href="compare.html">Compare</a></li>
-            </button>
-          </form>
-        </ul>
-      </nav>
+      <ul>
+        <form method="post" id="buttons-form">
+          <button class="about-the-game-button">
+            <li><a href="about-the-game.html">Sobre o Jogo</a></li>
+          </button>
+          <button class="characters-button">
+            <li><a href="characters.html">Personagens</a></li>
+          </button>
+          <button class="youtube-button">
+            <li><a href="youtube.html">Youtube</a></li>
+          </button>
+          <button class="compare-button">
+            <li><a href="compare.html">Compare</a></li>
+          </button>
+        </form>
+      </ul>
+    </nav>
     <br />
     <div class="characters-list">
-        <h1>Campeões</h1>
-        <p>PERSONAGENS DO JOGO</p>
-      </div>
+      <h1>Campeões</h1>
+      <p>PERSONAGENS DO JOGO</p>
+    </div>
     <footer class="made-by">Copyright (c) 2020 by Amanda e Larissa</footer>
     <div id="root"></div>
     <script src="main.js" type="module"></script>
