--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     <br />
     <div class="introduction-game" id="about-the-game-div">
-      <div class="back-button"><a href="#"><button class="back-to-main-page-button">Voltar ao topo ⇞</button></a></div>
+      <div class="back-button"><a href="#"><button class="back-to-main-page-button">⇞</button></a></div>
       <h1>Sobre o Jogo</h1>
     <p>League of Legends é um jogo de estratégia em que duas equipes de cinco
       poderosos Campeões se enfrentam para destruir a base uma da outra. Escolha
@@ -54,13 +54,13 @@
   </div>
   <br />
     <div class="characters-list" id="characters-div">
-      <div class="back-button"><a href="#"><button class="back-to-main-page-button">Voltar ao topo ⇞</button></a></div>
+      <div class="back-button"><a href="#"><button class="back-to-main-page-button">⇞</button></a></div>
       <h1>Campeões</h1>
       <p>PERSONAGENS DO JOGO</p>
     </div>
     <br />
     <div class="youtubers-list" id="youtube-div">
-      <div class="back-button"><a href="#"><button class="back-to-main-page-button">Voltar ao topo ⇞</button></a></div>
+      <div class="back-button"><a href="#"><button class="back-to-main-page-button">⇞</button></a></div>
       <h1>Youtubers Mulheres</h1>
     <p>
         <ul>
@@ -72,7 +72,7 @@
   </div>
   <br />
   <div class="compare-characters" id="compare-div">
-    <div class="back-button"><a href="#"><button class="back-to-main-page-button">Voltar ao topo ⇞</button></a></div>
+    <div class="back-button"><a href="#"><button class="back-to-main-page-button">⇞</button></a></div>
     <h1>Compare Campeões</h1>
   <p>COMPARE CAMPEÕES</p>
 </div>
