--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 
   <body>
 
-    <div class="header-link">
-      <a href="index.html"> <!--GERA UM LINK QUE DIRECIONAPRA PRIMAIRA PÁGINA-->
+   <div class="header-link">
         <header title="League of Legends Tool - Main Page">League of Legends Tool</header>
-      </a>
    </div>
 
     <nav class="menu">
@@ -43,7 +41,7 @@
       <main>
         <div id="lol-too-intro" class="style-view">
           <h1>League of Legends Tool</h1>
-          <p class="introduction-site">O League of Legends Tool é um site que reúne as informações mais importantes
+          <p>O League of Legends Tool é um site que reúne as informações mais importantes
           e mais requisitadas pelas jogadoras do, tão famoso, League of Legends. Aqui é possível 
           encontrar desde informações mais básicas sobre cada um dos Campeões, até 
           informações sobre youtubers mulheres que também são jogadoras de League of Legends.</p>
@@ -53,7 +51,7 @@
     
     <section id="about-the-game-div" class="style-view insivible-class">
       <h1>Sobre o Jogo</h1>
-      <p class="introduction-game">League of Legends é um jogo de estratégia em que duas equipes de cinco
+      <p>League of Legends é um jogo de estratégia em que duas equipes de cinco
       poderosos Campeões se enfrentam para destruir a base uma da outra. Escolha
       entre mais de 140 Campeões para realizar jogadas épicas, assegurar abates
       e destruir torres conforme você luta até a vitória.</p>
@@ -61,18 +59,18 @@
     
     <section id="characters-div" class="style-view insivible-class">
       <h1>Campeões</h1>
-      <div id="see-characters-here" class="characters-list"></div>
+      <div id="see-characters-here"></div>
     </section>
  
     <section id="compare-champions" class="insivible-class style-view">
-        <p class="compare-characters">Compare Campeões</p>
+        <p>Compare Campeões</p>
       </div>
     </section>
 
     <section id="youtube-media" class="style-view insivible-class">
         <h1>Youtubers Mulheres</h1>
       <p>
-          <ul class="youtubers-list">
+          <ul>
               <li>Thaiga</li> 
               <li>Queen</li> 
               <li>Riyuuka</li>
@@ -88,6 +86,11 @@
   <script src="main.js" type="module"></script>
   </body>
 </html>
+
+
+
+
+
 
 
 
@@ -114,6 +117,7 @@
         <header title="League of Legends Tool - Main Page">League of Legends Tool</header>
       </a>
    </div>
+
     <nav class="menu">
       <ul>
         <form method="post" id="buttons-form">
@@ -133,6 +137,7 @@
       </ul>
     </nav>
     <br>
+
     <div class="introduction-site">
       <h1>League of Legends Tool</h1>
       <p>O League of Legends Tool é um site que reúne as informações mais importantes
@@ -140,6 +145,7 @@
         encontrar desde informações mais básicas sobre cada um dos Campeões, até 
         informações sobre youtubers mulheres que também são jogadoras de League of Legends.</p>
     </div>
+
     <br>
     <div class="introduction-game" id="about-the-game-div">
       <div class="back-button"><a href="#"><button class="back-to-main-page-button">⇞</button></a></div>
@@ -149,13 +155,16 @@
       entre mais de 140 Campeões para realizar jogadas épicas, assegurar abates
       e destruir torres conforme você luta até a vitória.</p>
   </div>
+
   <br>
     <div class="characters-list" id="characters-div">
       <div class="back-button"><a href="#"><button class="back-to-main-page-button">⇞</button></a></div>
       <h1>Campeões</h1>
       <p>PERSONAGENS DO JOGO</p>
     </div>
+
     <br>
+
     <div class="youtubers-list" id="youtube-div">
       <div class="back-button"><a href="#"><button class="back-to-main-page-button">⇞</button></a></div>
       <h1>Youtubers Mulheres</h1>
@@ -174,8 +183,10 @@
     <h1>Compare Campeões</h1>
     <div>COMPARE CAMPEÕES</div>
   </div>
+
     <footer class="made-by">Copyright (c) 2020 by Amanda e Larissa</footer>
     <div id="root"></div>
+
     <script src="data/lol/lol.js"></script>
     <script src="data.js"></script>
     <script src="main.js" type="module"></script>
