--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
   <body>
 
    <div class="header-link">
+     <a href="index.html">
         <header title="League of Legends Tool - Main Page">League of Legends Tool</header>
+      </a>
    </div>
 
     <nav class="menu">
