Tentativa de filtrar

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
   <body>
 
    <div class="header-link">
+     <a href="index.html">
         <header title="League of Legends Tool - Main Page">League of Legends Tool</header>
+      </a>
    </div>
 
     <nav class="menu">
@@ -67,22 +69,42 @@
           <option value="ZA">Z-A</option>
         </select>
       </label>    -->
-
+<div id="sort-div">
       <legend>Select One:</legend>                
         <label>                    
         <input id="AZ" type="radio" name="ordination" value="AZ"> A-Z
-        <br>
         </label>
         <label>
         <input id="ZA" type="radio" name="ordination" value="ZA"> Z-A
-        <br>
         </label>
-        <button id="send-ordination">Ordenar Personagens</button>
-                    
-
+        <br>
+        <button id="send-ordination">Ordenar</button>
+</div>       
+<!--PARTE DOS FILTROS-->
+<div id="filter-div">
+      <legend>Select One:</legend>
+      <label>
+        <input type="radio" name="filter" value="filter-role" id="assassin">Assassin 
+        <input type="radio" name="filter" value="filter-role" id="fighter">Fighter 
+        <input type="radio" name="filter" value="filter-role" id="mage">Mage
+        <input type="radio" name="filter" value="filter-role" id="marksman">Marksman 
+        <input type="radio" name="filter" value="filter-role" id="support">Support
+        <input type="radio" name="filter" value="filter-role" id="tank">Tank
+      </label>
+      <br>
+      <button id="filter-champions">Filtrar</button>
+</div>
+<!--PARTE DOS FILTROS-->
       <div id="see-characters-here"></div>
       <div id="see-characters-sort-here-AZ"></div>
       <div id="see-characters-sort-here-ZA"></div>
+      <!--Filtros de role-->
+      <div id="see-characters-assassins-here"></div>
+      <div id="see-characters-fighters-here"></div>
+      <div id="see-characters-mage-here"></div>
+      <div id="see-characters-marksman-here"></div>
+      <div id="see-characters-support-here"></div>
+      <div id="see-characters-tank-here"></div>
     </section>
  
     <section id="compare-champions" class="insivible-class style-view">
