--- a/src/index.html
+++ b/src/index.html
@@ -95,6 +95,12 @@
       <button id="filter-champions">Filtrar</button>
 </div>
 <!--PARTE DOS FILTROS-->
+<!--PARTE DE BUSCA-->
+<div id="search-div">
+  <input type="text" placeholder="Digite aqui...">
+  <button id="search-button">Buscar</button>
+</div>
+<!--PARTE DE BUSCA-->
       <div id="see-characters-here"></div>
       <div id="see-characters-sort-here-AZ"></div>
       <div id="see-characters-sort-here-ZA"></div>
