Adição da ID search-entry

--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
 <!--PARTE DOS FILTROS-->
 <!--PARTE DE BUSCA-->
 <div id="search-div">
-  <input type="text" placeholder="Digite aqui...">
+  <input type="text" id="search-entry" placeholder="Digite aqui...">
   <button id="search-button">Buscar</button>
 </div>
 <!--PARTE DE BUSCA-->
