Remoção de div desnecessária

--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,8 @@
       <button id="send-ordination">Ordenar</button>
     </div>
     <!--PARTE DOS FILTROS-->
-    <div id="filter-div">
+<!--
+      <div id="filter-div">
       <legend>Select One:</legend>
       <label>
         <input type="radio" name="filter" value="filter-role" id="assassin">Assassin
@@ -93,8 +94,9 @@
         <input type="radio" name="filter" value="filter-role" id="tank">Tank
       </label>
       <br>
-      <button id="filter-champions">Filtrar</button>
+      <button id="filter-champions">Filtrar</button> 
     </div>
+-->
     <!--PARTE DOS FILTROS-->
     <!--PARTE DE BUSCA-->
     <div id="search-div">
@@ -106,6 +108,7 @@
     <div id="see-characters-here"></div>
     <div id="see-characters-sort-here-AZ"></div>
     <div id="see-characters-sort-here-ZA"></div>
+    <div id="see-filtered-champions-here"></div>
   </section>
 
   <section id="compare-champions" class="insivible-class style-view">
