--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div id="sort-div">
       <legend>Select One:</legend>
       <label>
-        <input id="AZ" type="radio" name="ordination" value="AZ"> A-Z
+        <input id="AZ" type="radio" name="ordination" value="AZ" checked> A-Z
       </label>
       <label>
         <input id="ZA" type="radio" name="ordination" value="ZA"> Z-A
@@ -106,14 +106,10 @@
     <!--PARTE DE BUSCA-->
     <button type="submit" id="reset-button">Reset</button>
     <div id="see-characters-here"></div>
-    <div id="see-characters-sort-here-AZ"></div>
-    <div id="see-characters-sort-here-ZA"></div>
-    <div id="see-filtered-champions-here"></div>
   </section>
 
   <section id="compare-champions" class="insivible-class style-view">
     <p>Compare Campeões</p>
-    </div>
   </section>
 
   <section id="youtube-media" class="style-view insivible-class">
