--- a/src/index.html
+++ b/src/index.html
@@ -35,10 +35,7 @@
         <li>Youtube</li>
       </button>
     </ul>
-
   </nav>
-
-  <br>
 
   <section>
     <main>
@@ -63,48 +60,23 @@
   <section id="characters-div" class="style-view insivible-class">
     <h1>Campeões</h1>
 
-    <!--     <label>
-<select id="sort-characters" name="sort-characters">
-<option value="selec-one">Select One …</option>
-<option value="AZ">A-Z</option>
-<option value="ZA">Z-A</option>
-</select>
-</label>    -->
     <div id="sort-div">
       <legend>Select One:</legend>
       <label>
-        <input id="AZ" type="radio" name="ordination" value="AZ" checked> A-Z
+        <input id="AZ" type="radio" name="ordination" value="AZ"> A-Z
       </label>
       <label>
         <input id="ZA" type="radio" name="ordination" value="ZA"> Z-A
-      </label>
-      <br>
-      <button id="send-ordination">Ordenar</button>
+      </label>      
     </div>
-    <!--PARTE DOS FILTROS-->
-<!--
-      <div id="filter-div">
-      <legend>Select One:</legend>
-      <label>
-        <input type="radio" name="filter" value="filter-role" id="assassin">Assassin
-        <input type="radio" name="filter" value="filter-role" id="fighter">Fighter
-        <input type="radio" name="filter" value="filter-role" id="mage">Mage
-        <input type="radio" name="filter" value="filter-role" id="marksman">Marksman
-        <input type="radio" name="filter" value="filter-role" id="support">Support
-        <input type="radio" name="filter" value="filter-role" id="tank">Tank
-      </label>
-      <br>
-      <button id="filter-champions">Filtrar</button> 
-    </div>
--->
-    <!--PARTE DOS FILTROS-->
-    <!--PARTE DE BUSCA-->
+   
     <div id="search-div">
       <input type="text" id="search-entry" placeholder="Digite aqui...">
       <button id="search-button">Buscar</button>
     </div>
-    <!--PARTE DE BUSCA-->
+
     <button type="submit" id="reset-button">Reset</button>
+
     <div id="see-characters-here"></div>
   </section>
 
