Finalização do filtro

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         <li>Sobre o Jogo</li>
       </button>
 
-      <button id="show-champions" class="style-buttons">
+      <button id="show-champions-button" class="style-buttons">
         <li>Campeões</li>
       </button>
 
