--- a/src/index.html
+++ b/src/index.html
@@ -75,23 +75,20 @@
       <button id="search-button">Buscar</button>
     </div>
 
-    <!-- <button type="submit" id="reset-button">Reset</button> -->
-
     <div id="see-characters-here"></div>
-    <!-- <div id="see-filtered-champions-here"></div> -->
   </section>
 
   <section id="compare-champions" class="insivible-class style-view">
     <h1>Dados sobre os Campeões</h1>
-      <div id="div-skill-number">
+    <div id="div-skill-number">
       <p class="for-display">Quantos por cento de campeões tem </p>
       <select id="types-of-information" class="for-display" name="types-of-information">
-        <option value="attack">attack</option>
-        <option value="defense">defense</option>
-        <option value="magic">magic</option>
-        <option value="difficulty">difficulty</option>
+        <option value="attack">Attack</option>
+        <option value="defense">Defense</option>
+        <option value="magic">Magic</option>
+        <option value="difficulty">Difficulty</option>
       </select>
-      <p class="for-display">maior igual que </p>
+      <p class="for-display" id="maior-igual-que">maior igual que </p>
       <select id="level-of-information" class="for-display" name="level-of-information">
         <option value="1">1</option>
         <option value="2">2</option>
@@ -105,7 +102,7 @@
         <option value="10">10</option>
       </select>
     </div>
-      <button id="see-data-here-button">Mostrar dados</button>
+    <button id="see-data-here-button">Mostrar dados</button>
     <div id="see-data-here"></div>
   </section>
 
