--- a/index.html
+++ b/index.html
@@ -60,22 +60,22 @@
 
   <section id="characters-div" class="style-view insivible-class">
     <h1>Campeões</h1>
+    <div id="order-search-buttons">
+      <div id="sort-div">
+        <legend>Select One:</legend>
+        <label>
+          <input id="AZ" type="radio" name="ordination" value="AZ"> A-Z
+        </label>
+        <label>
+          <input id="ZA" type="radio" name="ordination" value="ZA"> Z-A
+        </label>
+      </div>
 
-    <div id="sort-div">
-      <legend>Select One:</legend>
-      <label>
-        <input id="AZ" type="radio" name="ordination" value="AZ"> A-Z
-      </label>
-      <label>
-        <input id="ZA" type="radio" name="ordination" value="ZA"> Z-A
-      </label>
+      <div id="search-div">
+        <input type="text" id="search-entry" placeholder="Digite aqui...">
+        <button id="search-button">Buscar</button>
+      </div>
     </div>
-
-    <div id="search-div">
-      <input type="text" id="search-entry" placeholder="Digite aqui...">
-      <button id="search-button">Buscar</button>
-    </div>
-
     <div id="see-characters-here"></div>
   </section>
 
