--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     </div>
     <button id="see-data-here-button">Mostrar dados</button>
     <div id="see-data-here"></div>
+    <div id="see-champions-with-corresponding-data"></div>
   </section>
 
   <section id="youtube-media" class="style-view insivible-class">
