Construção da página das youtubers

--- a/src/index.html
+++ b/src/index.html
@@ -110,13 +110,51 @@
 
   <section id="youtube-media" class="style-view insivible-class">
     <h1>Youtubers Mulheres</h1>
-    <p>
+    <div class="youtube">
+      <div class="youtube-box">
+        <div class="youtube-info">
+          <h1 for="thaiga">Thaiga</h1>
+          <p>Escrever uma descrição sobre ela</p>
+            <div class="video">
+              <iframe width="500" height="300" src="https://www.youtube.com/embed/4fbjbOgjsqs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          <p><a href="https://www.youtube.com/channel/UC81CElb6SqJcOMaCAC-fwbQ">YouTube</a><br>
+          <a href="https://www.facebook.com/thaigakuma/">Facebook</a><br>
+          <a href="https://www.instagram.com/biancalula/?hl=pt-br">Instagram</a></p>
+        </div>
+      </div>
+      <div class="youtube-box">
+        <div class="youtube-info">
+          <h1 for="riyuuka">Riyuuka</h1>
+          <p>Escrever uma descrição sobre ela</p>
+          <div class="video">
+            <iframe width="500" height="300" src="https://www.youtube.com/embed/ch3D9ntZUgw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <p><a href="https://www.youtube.com/channel/UC4X086ysoXD6-gO_0sdkqXw">YouTube</a><br>
+          <a href="https://www.facebook.com/riyuuka/">Facebook</a><br>
+          <a href="https://www.instagram.com/riyuuka/?fbclid=IwAR2T8bH63zKcuS6CxJgOmVyH8T0W94zhCSn5sUu4LPujUhPfnVgaK2N1iq4">Instagram</a></p>
+        </div>
+      </div>
+      <div class="youtube-box">
+        <div class="youtube-info">
+          <h1 for="queen">Queen B</h1>
+          <p>Escrever uma descrição sobre ela</p>
+          <div class="video">
+            <iframe width="500" height="300" src="https://www.youtube.com/embed/WV74COepTmM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <p><a href="https://www.youtube.com/user/binstantane">YouTube</a><br>
+          <a href="https://www.facebook.com/brinyyy">Facebook</a><br>
+          <a href="https://www.instagram.com/brinydelaet/">Instagram</a></p>
+        </div>
+      </div>
+    </div>
+   <!-- <p>
     <ul>
       <li>Thaiga</li>
       <li>Queen</li>
       <li>Riyuuka</li>
     </ul>
-    </p>
+    </p>-->
   </section>
 
 
