Finaliação da página do youtube

--- a/src/index.html
+++ b/src/index.html
@@ -114,9 +114,9 @@
       <div class="youtube-box">
         <div class="youtube-info">
           <h1 for="thaiga">Thaiga</h1>
-          <p>Escrever uma descrição sobre ela</p>
+          <p>Bianca Thaiga é, além de uma streamer<br> e analista da Superliga ABCDE,<br> o talento mais jovem da Superliga.<br> E também embaixadora na Pain Gaming.</p>
             <div class="video">
-              <iframe width="500" height="300" src="https://www.youtube.com/embed/4fbjbOgjsqs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe src="https://www.youtube.com/embed/4fbjbOgjsqs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           <p><a href="https://www.youtube.com/channel/UC81CElb6SqJcOMaCAC-fwbQ">YouTube</a><br>
           <a href="https://www.facebook.com/thaigakuma/">Facebook</a><br>
@@ -126,9 +126,9 @@
       <div class="youtube-box">
         <div class="youtube-info">
           <h1 for="riyuuka">Riyuuka</h1>
-          <p>Escrever uma descrição sobre ela</p>
+          <p>Mônica Riyuuka é streamer<br> na Pain Gaming. O conteúdo do seu<br> canal contém, também, vlogs,<br> Q&A sobre gameplay, dicas e outros</p>
           <div class="video">
-            <iframe width="500" height="300" src="https://www.youtube.com/embed/ch3D9ntZUgw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/ch3D9ntZUgw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <p><a href="https://www.youtube.com/channel/UC4X086ysoXD6-gO_0sdkqXw">YouTube</a><br>
           <a href="https://www.facebook.com/riyuuka/">Facebook</a><br>
@@ -138,9 +138,9 @@
       <div class="youtube-box">
         <div class="youtube-info">
           <h1 for="queen">Queen B</h1>
-          <p>Escrever uma descrição sobre ela</p>
+          <p>Raphaela Marques Laet é uma streamer,<br> youtuber, pro-gamer e entertainer. Em seu<br> canal é possível encontrar não somente<br> sobre  LoL, mas outros jogos também </p>
           <div class="video">
-            <iframe width="500" height="300" src="https://www.youtube.com/embed/WV74COepTmM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/WV74COepTmM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <p><a href="https://www.youtube.com/user/binstantane">YouTube</a><br>
           <a href="https://www.facebook.com/brinyyy">Facebook</a><br>
